# asp3_fsp

./: .gitattributes  .gitignore  CMakeLists.txt  Config.cmake  README.md  asp3_change.md  bsp_linker_info.h  configuration.xml  fsp_gen.lld  ra_cfg.txt
asp3/: CMakeLists.txt  asp3_fsp.cmake
asp3/arch/arm_m_gcc/common/: arm_m.h  core_kernel_impl.c  core_kernel_impl.h  core_support.S
asp3/arch/arm_m_gcc/doc/: design.md
asp3/arch/arm_m_gcc/ra6m5_fsp/: arch.cmake  chip_kernel.h  chip_kernel_impl.h  chip_sil.h  chip_stddef.h  chip_syssvc.h
asp3/arch/arm_m_gcc/ra8m2_fsp/: arch.cmake  chip_kernel.h  chip_kernel_impl.h  chip_sil.h  chip_stddef.h  chip_syssvc.h
asp3/include/: sil.h
asp3/kernel/: mempfix.c  mutex.c  startup.c  task.c  task_manage.c  time_manage.c  wait.c  wait.h
asp3/sample/: sample1.c  sample1.cfg
asp3/syssvc/: banner.c  logtask.c  serial.c  syslog.c  syssvc.cmake
cmake/: GeneratedCfg.cmake  GeneratedSrc.cmake  llvm.cmake
ek_ra6m5/sample/: .secure_azone  .secure_xml  CMakeLists.txt  Config.cmake  README.md  bsp_linker_info.h  buildinfo.json  configuration.xml
ek_ra6m5/sample/cmake/: llvm.cmake
ek_ra8m2/sample/: .secure_azone  .secure_xml  CMakeLists.txt  Config.cmake  README.md  bsp_linker_info.h  configuration.xml
ek_ra8m2/sample/.theia/: launch.json
ek_ra8m2/sample/src/: hal_entry.c
ra_cfg/fsp_cfg/bsp/: bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h
ra_gen/: hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
src/: hal_entry.c
